--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         "react-dom/": "https://esm.sh/react-dom@18.2.0/",
         "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
         "lucide-react": "https://esm.sh/lucide-react@0.263.1?deps=react@18.2.0",
-        "@google/genai": "https://esm.sh/@google/genai@0.1.1"
+        "@google/genai": "https://esm.sh/@google/genai"
       }
     }
     </script>
